# WeatherBotSmolensk67

./: .dockerignore  .gitignore  Dockerfile  Example.py  docker-compose.yml  main.py  pyproject.toml
TestPrompts/: 1.txt
src/: config.py
src/bot/: handlers.py  keyboards.py
src/database/: crud.py  models.py  session.py
src/services/: cache.py  gigachat_api.py  scheduler.py  weather_api.py
src/utils/: formatting.py
