[project]
name = "weatherbot"
version = "0.1.0"
description = "Telegram weather bot for Smolensk region with GigaChat AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.15",
    "gigachat>=0.2",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "redis[hiredis]>=5.0",
    "apscheduler>=3.10",
    "requests>=2.34.2",
]
